# nobodywho

nobodywho/: Cargo.toml
nobodywho/core/: Cargo.toml
nobodywho/grammar/gbnf/: Cargo.toml
nobodywho/swift/: .gitignore  Package.swift  README.md  RELEASE.md
nobodywho/swift/Examples/: QuickStart.swift  README.md
nobodywho/swift/Examples/ChatExample/: README.md
nobodywho/swift/Examples/ChatExample/Example/: ChatComponents.swift  ContentView.swift  ExampleApp.swift  Models.swift  SettingsView.swift
nobodywho/swift/Examples/ChatExample/ExampleTests/: ExampleTests.swift
nobodywho/swift/Examples/ChatExample/ExampleUITests/: ExampleUITests.swift  ExampleUITestsLaunchTests.swift
nobodywho/swift/Examples/NobodyVision/NobodyVisionUI/: Package.resolved  Package.swift
nobodywho/swift/Examples/NobodyVision/Valkyrie/: AppRouter.swift  ChatSession.swift  ContentView.swift  ValkyrieApp.swift
nobodywho/swift/Examples/NobodyVision/Valkyrie/Models/: Conversation.swift  DownloadedModel.swift  RemoteModel.swift
nobodywho/swift/Examples/NobodyVision/Valkyrie/Screens/: ChatView.swift  ModelsView.swift
nobodywho/swift/Examples/NobodyVision/Valkyrie/Stores/: ModelStore.swift
nobodywho/swift/Examples/NobodyWatch/: ValkyrieIOS-Info.plist
nobodywho/swift/Examples/NobodyWatch/NobodyWatch App/: ChatSession.swift  ModelLoadingView.swift
nobodywho/swift/Examples/NobodyWatch/NobodyWatch Watch App/: ChatSession.swift  ContentView.swift  MainView.swift  ModelLoadingView.swift  ModelStore.swift  NobodyWatchApp.swift
nobodywho/swift/Examples/NobodyWatch/NobodyWatchUI/: Package.swift
nobodywho/swift/Examples/NobodyWatch/Valkyrie/: ChatSession.swift  ValkyrieApp.swift
nobodywho/swift/Examples/NobodyWatch/ValkyrieIOS/: ValkyrieIOSApp.swift
nobodywho/swift/NobodyWhoFFIFFI.xcframework/: Info.plist
nobodywho/swift/NobodyWhoFFIFFI.xcframework/macos-arm64_x86_64/NobodyWhoFFIFFI.framework/: NobodyWhoFFIFFI
nobodywho/swift/Sources/NobodyWho/: Exports.swift  NobodyWho.swift  NobodyWhoModule.swift
nobodywho/swift/Sources/NobodyWho/Agents/: Chains.swift  LlamaCppEmbedder.swift  Protocols.swift  SQLiteVectorStore.swift  SemanticMemory.swift  SwiftDataVectorStore.swift  VectorStores.swift  VisionImageProcessor.swift
nobodywho/swift/Sources/NobodyWhoFFIFFI/: module.modulemap
nobodywho/swift/Sources/NobodyWhoFFIFFI/include/: module.modulemap
nobodywho/swift/Sources/NobodyWhoTestCLI/: main.swift
nobodywho/swift/Tests/IntegrationTests/: CLITest.swift
nobodywho/swift/Tests/NobodyWhoTests/: NobodyWhoTests.swift
nobodywho/swift/bindgen/: Cargo.toml
nobodywho/swift/bindgen/src/: main.rs
nobodywho/swift/scripts/: build_xcframework.sh  generate_bindings.sh  generate_swift.py  setup_framework.sh
nobodywho/uniffi/: Cargo.toml
nobodywho/uniffi/src/: lib.rs  nobodywho.udl
(+33 files in other folders)
