[package]
name = "nobodywho"
version = "2.2.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "nobodywho"

[features]
default = []
uniffi = ["dep:uniffi"]

[dependencies]
uniffi = { version = "0.30.0", features = ["cli"], optional = true }
encoding_rs = "0.8.34"
thiserror = "2.0.3"
minijinja = { version = "2.11.0", features = ["builtins", "json", "loader"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.39"
llama-cpp-2 = { git = "https://github.com/AsbjornOlling/llama-cpp-rs", branch = "fix-android-static-link-libstdcxx-for-mtmd", default-features = false, features = [
    "openmp",
    "android-static-stdcxx",
    "mtmd",
] }
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
regex = "1.11.1"
serde_json = "1.0.140"
gbnf = { path = "../grammar/gbnf" }
gbnf-macro = { path = "../grammar/gbnf-macro" }
nom = "8.0.0"
rand = "0.9.2"
futures = "0.3.31"
ahash = "0.8.12"
indexmap = "2.13.0"

[build-dependencies]
uniffi = { version = "0.30.0", features = ["build"], optional = true }

# Enable Vulkan for x86_64, x86, and aarch64 targets (excluding macOS, iOS, Android)
[target.'cfg(all(not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android"), any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
llama-cpp-2 = { git = "https://github.com/AsbjornOlling/llama-cpp-rs", branch = "fix-android-static-link-libstdcxx-for-mtmd", default-features = false, features = [
    "openmp",
    "vulkan",
    "mtmd",
    "android-static-stdcxx",
] }

